# agent-ai-playground

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
anthropic_scratch/experiment_1/: main.py
experiment_1/: config.py  main.py  main2.py  prompts.py  tools.py  util.py
experiment_2/: agent.py  main.py  main2.py  permissions.py  prompt.txt  response.py  tools.py
experiment_3/: agents.py  website.py
ollama_scratch/experiment_1/: main.py  tools.py
openai_scratch/experiment_1/: agents.py  main.py  prompts.py  website.py
openai_scratch/experiment_2/: agent.py  main.py  permissions.py  prompt.txt  tools.py
openai_scratch/experiment_3/: main.py
openai_scratch/experiment_4/: main.py
openai_scratch/experiment_5/: main.py  prompts.py
